Version 0.0.0
- Projet créé
- Structure initiale avec main.py et launcher.py
- Fichiers version.txt et changelog.txt ajoutés

Version 0.1.0
- Ajout des page pour voir les evenements et eleves
- mis en place du filtre au niveaux des eleves
- Structure du projet revues

Version 0.2.0
-Modification du filtre
-Mise en place du calcule de prix par evenements
-Autre feature

Version 0.3.0
-Update de l'UI
-Modification de la vu Home
-Mise en place de la logique d'importation d'excel

Version 0.4.0
-Update du filtre
-Update des données et affichage des etudiant
-Ajout d'un calendrier fonctionnel sur la page home

Version 0.5.0
-Ajout d'animations au launcher